--- a/frontend/src/app/shared/dialog-time/dialog-time.component.html
+++ b/frontend/src/app/shared/dialog-time/dialog-time.component.html
@@ -37,7 +37,7 @@
     }
     }
     <mat-checkbox [(ngModel)]="isWholeDay" (change)="onWholeDayChange()">
-      Whole Day<br/> (Any time is preferred)
+      Whole Day (Any time is preferred)
     </mat-checkbox>
   </mat-dialog-content>
 
