--- a/frontend/src/app/shared/dialog-time/dialog-time.component.scss
+++ b/frontend/src/app/shared/dialog-time/dialog-time.component.scss
@@ -1,6 +1,7 @@
 @import "../../../styles/mixins.scss";
 .material-dialog-container {
   padding-top: var(--spacing-sm);
+  width: var(--dialog-small);
 }
 
 .dialog-title {
