integrate new preferences deletion API into the frontend

--- a/frontend/src/app/core/components/faculty/preferences/preferences.component.html
+++ b/frontend/src/app/core/components/faculty/preferences/preferences.component.html
@@ -183,7 +183,7 @@
             <button
               mat-icon-button
               class="remove-button"
-              (click)="removeCourse(element.course_code)"
+              (click)="removeCourse(element)"
             >
               <span mat-symbol="do_not_disturb_on" variant="outlined"></span>
             </button>
