--- a/frontend/src/app/core/components/faculty/preferences/preferences.component.scss
+++ b/frontend/src/app/core/components/faculty/preferences/preferences.component.scss
@@ -5,16 +5,30 @@
 }
 
 .faculty-preferences-container {
+  @include flex-layout(
+    $direction: column,
+    $align: stretch,
+    $gap: var(--spacing-lg)
+  );
   @include default-transition;
-  display: flex;
-  flex-direction: column;
-  gap: var(--spacing-lg);
   height: 100%;
+  position: relative;
 
   .disabled {
     opacity: 0.5;
     pointer-events: none;
     user-select: none;
+  }
+
+  .overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ffffff00;
+    z-index: 10;
+    pointer-events: auto;
   }
 }
 
