--- a/frontend/src/app/shared/dialog-confirm-pref/dialog-confirm-pref.component.html
+++ b/frontend/src/app/shared/dialog-confirm-pref/dialog-confirm-pref.component.html
@@ -20,7 +20,7 @@
       <!--Description-->
       <p class="step-description confirm-desc">
         Ensure your course selections and schedule preferences are final before
-        confirming. Once you click "Confirm," changes won't be allowed.
+        confirming. <strong>Once you click "Confirm", changes won't be allowed.</strong>
       </p>
     </div>
     <!--Step 1 Buttons-->
