--- a/frontend/src/app/core/components/faculty/preferences/preferences.component.html
+++ b/frontend/src/app/core/components/faculty/preferences/preferences.component.html
@@ -233,7 +233,7 @@
           <th mat-header-cell *matHeaderCellDef class="table-header">
             Preferred Day
           </th>
-          <td mat-cell *matCellDef="let element" class="table-cell pref">
+          <td mat-cell *matCellDef="let element" class="table-cell">
             <button
               mat-button
               (click)="openDayDialog(element)"
