add smoother transition on opacity change

--- a/frontend/src/app/core/components/faculty/preferences/preferences.component.scss
+++ b/frontend/src/app/core/components/faculty/preferences/preferences.component.scss
@@ -19,6 +19,7 @@
     opacity: 0.5;
     pointer-events: none;
     user-select: none;
+    transition: opacity 0.3s ease-in-out;
   }
 
   .overlay {
