add new faculty-pref component

--- a/frontend/src/app/core/components/admin/main/main.component.html
+++ b/frontend/src/app/core/components/admin/main/main.component.html
@@ -39,7 +39,7 @@
       <a
         mat-list-item
         class="list-item"
-        routerLink="/admin/faculty"
+        routerLink="/admin/faculty-preferences"
         routerLinkActive="active-link"
       >
         <span mat-symbol="groups" matListItemIcon></span>
