global mat ripple color improvements

--- a/frontend/src/app/shared/table-generic/table-generic.component.html
+++ b/frontend/src/app/shared/table-generic/table-generic.component.html
@@ -70,14 +70,14 @@
         <div class="action-buttons">
           <!-- Optionally shows 'View' button-->
           @if (showViewButton) {
-          <button mat-button class="view-button" (click)="onView(element)">
+          <button mat-button class="ter-ripple view-button" (click)="onView(element)">
             <mat-icon>visibility</mat-icon>
             <span>View</span>
           </button>
           }
 
           <!-- Edit Button -->
-          <button mat-button class="edit-button" (click)="onEdit(element)">
+          <button mat-button class="sec-ripple edit-button" (click)="onEdit(element)">
             <mat-icon>edit</mat-icon>
             <span>Edit</span>
           </button>
