--- a/frontend/src/app/shared/table-header/table-header.component.html
+++ b/frontend/src/app/shared/table-header/table-header.component.html
@@ -54,7 +54,7 @@
     <div class="button-container">
       <!-- Export to PDF Button -->
       @if (showExportButton) {
-        <button mat-flat-button class="custom-mat-button export-button" (click)="onExport()">
+        <button mat-flat-button class="ter-ripple custom-mat-button export-button" (click)="onExport()">
           <mat-icon>picture_as_pdf</mat-icon>
           Export to PDF
         </button>
