--- a/frontend/src/app/core/components/admin/scheduling/scheduling.component.html
+++ b/frontend/src/app/core/components/admin/scheduling/scheduling.component.html
@@ -136,7 +136,7 @@
           <td mat-cell *matCellDef="let element" class="custom-cell">
             <button
               mat-button
-              class="edit-button"
+              class="sec-ripple edit-button"
               (click)="openEditDialog(element)"
             >
               <mat-icon>edit</mat-icon>
