improve header slide toggle styling

--- a/frontend/src/app/core/components/admin/faculty-pref/faculty-pref.component.html
+++ b/frontend/src/app/core/components/admin/faculty-pref/faculty-pref.component.html
@@ -92,6 +92,7 @@
         <ng-container matColumnDef="toggle">
           <th mat-header-cell *matHeaderCellDef class="custom-header">
             <mat-slide-toggle
+            class="header-toggle"
               (change)="onToggleAllChange($event)"
             ></mat-slide-toggle>
           </th>
