--- a/frontend/src/app/core/components/admin/faculty-pref/faculty-pref.component.html
+++ b/frontend/src/app/core/components/admin/faculty-pref/faculty-pref.component.html
@@ -92,12 +92,16 @@
         <ng-container matColumnDef="toggle">
           <th mat-header-cell *matHeaderCellDef class="custom-header">
             <mat-slide-toggle
-            class="header-toggle"
+              class="header-toggle"
+              matTooltip="Toggle preferences submission for all faculty"
               (change)="onToggleAllChange($event)"
             ></mat-slide-toggle>
           </th>
           <td mat-cell *matCellDef="let element" class="custom-cell">
-            <mat-slide-toggle (change)="onToggleChange(element)">
+            <mat-slide-toggle
+              matTooltip="Toggle preferences submission for this faculty only"
+              (change)="onToggleChange(element)"
+            >
             </mat-slide-toggle>
           </td>
         </ng-container>
