--- a/frontend/src/app/core/components/admin/faculty-pref/faculty-pref.component.html
+++ b/frontend/src/app/core/components/admin/faculty-pref/faculty-pref.component.html
@@ -94,11 +94,14 @@
             <mat-slide-toggle
               class="header-toggle"
               matTooltip="Toggle preferences submission for all faculty"
+              [checked]="isToggleAllChecked"
               (change)="onToggleAllChange($event)"
-            ></mat-slide-toggle>
+            >
+            </mat-slide-toggle>
           </th>
           <td mat-cell *matCellDef="let element" class="custom-cell">
             <mat-slide-toggle
+              [(ngModel)]="element.is_enabled"
               matTooltip="Toggle preferences submission for this faculty only"
               (change)="onToggleChange(element)"
             >
