--- a/frontend/src/app/core/components/admin/faculty-pref/faculty-pref.component.html
+++ b/frontend/src/app/core/components/admin/faculty-pref/faculty-pref.component.html
@@ -21,7 +21,7 @@
             #
           </th>
           <td mat-cell *matCellDef="let element; let i = index" class="index">
-            <span>{{ i + 1 }}</span>
+            <span>{{ i + 1 + paginator.pageIndex * paginator.pageSize }}</span>
           </td>
         </ng-container>
 
@@ -112,6 +112,17 @@
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
       </table>
+
+      <!-- Table Paginator -->
+      <mat-paginator
+        class="custom-paginator"
+        [length]="dataSource.data.length"
+        [pageSize]="10"
+        [pageSizeOptions]="[5, 10, 25, 50, 100]"
+        [showFirstLastButtons]="true"
+        aria-label="Select page"
+      >
+      </mat-paginator>
     </div>
   </div>
 </div>
