--- a/frontend/src/app/shared/table-header/table-header.component.scss
+++ b/frontend/src/app/shared/table-header/table-header.component.scss
@@ -9,6 +9,10 @@
   .input-container {
     @include flex-layout($gap: var(--spacing-md));
 
+    .search-field {
+      width: 20rem;
+    }
+
     .program-field {
       width: 20rem;
     }
