--- a/frontend/src/app/core/components/admin/faculty-pref/faculty-pref.component.scss
+++ b/frontend/src/app/core/components/admin/faculty-pref/faculty-pref.component.scss
@@ -74,6 +74,22 @@
         }
       }
     }
+
+    .no-data-cell {
+      text-align: center;
+      padding: var(--spacing-lg);
+
+      .flex-cell {
+        @include flex-layout(
+          $align: center,
+          $justify: center,
+          $gap: var(--spacing-xs)
+        );
+
+        span {
+          opacity: var(--opacity-semi-opaque);
+        }
+      }
+    }
   }
 }
-
