--- a/frontend/src/app/core/components/admin/faculty-pref/faculty-pref.component.html
+++ b/frontend/src/app/core/components/admin/faculty-pref/faculty-pref.component.html
@@ -1,6 +1,11 @@
-<div class="faculty-pref-container" [@fadeAnimation]>
+<div class="faculty-pref-container">
+  @if (isLoading) {
+  <div class="loading-wrapper">
+    <app-loading></app-loading>
+  </div>
+  } @else {
   <!-- Faculty Preferences Header Container -->
-  <div class="faculty-pref-header-container">
+  <div class="faculty-pref-header-container" [@fadeAnimation]>
     <app-table-header
       [inputFields]="inputFields"
       [showExportButton]="true"
@@ -12,7 +17,7 @@
   </div>
 
   <!-- Faculty Preferences Table -->
-  <div class="faculty-pref-table-container">
+  <div class="faculty-pref-table-container" [@fadeAnimation]>
     <div class="table-container">
       <table mat-table [dataSource]="dataSource" class="custom-table">
         <!-- Index Column -->
@@ -21,7 +26,13 @@
             #
           </th>
           <td mat-cell *matCellDef="let element; let i = index" class="index">
-            <span>{{ i + 1 + paginator.pageIndex * paginator.pageSize }}</span>
+            <span>
+              {{
+                i +
+                  1 +
+                  (paginator?.pageIndex || 0) * (paginator?.pageSize || 10)
+              }}
+            </span>
           </td>
         </ng-container>
 
@@ -135,4 +146,5 @@
       </mat-paginator>
     </div>
   </div>
+  }
 </div>
