--- a/frontend/src/app/core/components/admin/faculty-pref/faculty-pref.component.html
+++ b/frontend/src/app/core/components/admin/faculty-pref/faculty-pref.component.html
@@ -137,10 +137,11 @@
       <!-- Table Paginator -->
       <mat-paginator
         class="custom-paginator"
-        [length]="dataSource.data.length"
+        [length]="filteredData.length"
         [pageSize]="10"
         [pageSizeOptions]="[5, 10, 25, 50, 100]"
         [showFirstLastButtons]="true"
+        (page)="updateDisplayedData()"
         aria-label="Select page"
       >
       </mat-paginator>
