minor styling enhancements

--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -147,6 +147,7 @@ span[mat-symbol] {
 
 .custom-paginator {
   @include default-transition;
+  padding: var(--spacing-sm) 0 !important;
   background-color: var(--neutral-light) !important;
 }
 
