--- a/frontend/src/app/shared/dialog-pref/dialog-pref.component.html
+++ b/frontend/src/app/shared/dialog-pref/dialog-pref.component.html
@@ -89,8 +89,9 @@
             Preferred Time
           </th>
           <td mat-cell *matCellDef="let element" class="custom-cell">
-            {{ element.preferred_start_time }} -
-            {{ element.preferred_end_time }}
+            {{ convertToDate(element.preferred_start_time) | date : "h:mm a" }}
+            -
+            {{ convertToDate(element.preferred_end_time) | date : "h:mm a" }}
           </td>
         </ng-container>
 
