--- a/frontend/src/app/core/components/admin/faculty-pref/faculty-pref.component.scss
+++ b/frontend/src/app/core/components/admin/faculty-pref/faculty-pref.component.scss
@@ -58,6 +58,24 @@
       padding: var(--spacing-xs);
       text-align: center;
 
+      .faculty-type {
+        width: fit-content;
+        padding: var(--spacing-xxs) var(--spacing-xs);
+        border-radius: var(--border-radius-xs);
+        font-size: var(--font-size-xsx);
+        font-weight: 500;
+
+        &.full-time {
+          background-color: var(--blue-fade-lighter);
+          color: var(--blue-primary);
+        }
+
+        &.part-time {
+          background-color: var(--purple-fade-lighter);
+          color: var(--purple-primary);
+        }
+      }
+
       .view-button {
         color: var(--secondary-text);
         margin-right: var(--spacing-md);
