--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -132,6 +132,10 @@ body {
   background-color: rgba(84, 84, 84, 0.3) !important;
 }
 
+.sec-spinner .mat-spinner circle {
+  stroke: var(--secondary-text) !important;
+}
+
 span[mat-symbol] {
   font-family: "Material Symbols Rounded" !important;
   user-select: none;
