--- a/frontend/src/app/core/components/admin/scheduling/scheduling.component.html
+++ b/frontend/src/app/core/components/admin/scheduling/scheduling.component.html
@@ -98,7 +98,9 @@
         <ng-container matColumnDef="day">
           <th mat-header-cell *matHeaderCellDef class="custom-header">Day</th>
           <td mat-cell *matCellDef="let element" class="custom-cell">
-            <span [class.not-set-badge]="element.day === 'Not set'">{{ element.day }}</span>
+            <span [class.not-set-badge]="element.day === 'Not set'">{{
+              element.day
+            }}</span>
           </td>
         </ng-container>
 
@@ -106,7 +108,9 @@
         <ng-container matColumnDef="time">
           <th mat-header-cell *matHeaderCellDef class="custom-header">Time</th>
           <td mat-cell *matCellDef="let element" class="custom-cell">
-            <span [class.not-set-badge]="element.time === 'Not set'">{{ element.time }}</span>
+            <span [class.not-set-badge]="element.time === 'Not set'">{{
+              element.time
+            }}</span>
           </td>
         </ng-container>
 
@@ -116,7 +120,9 @@
             Professor
           </th>
           <td mat-cell *matCellDef="let element" class="custom-cell">
-            <span [class.not-set-badge]="element.professor === 'Not set'">{{ element.professor }}</span>
+            <span [class.not-set-badge]="element.professor === 'Not set'">{{
+              element.professor
+            }}</span>
           </td>
         </ng-container>
 
@@ -124,7 +130,9 @@
         <ng-container matColumnDef="room">
           <th mat-header-cell *matHeaderCellDef class="custom-header">Room</th>
           <td mat-cell *matCellDef="let element" class="custom-cell">
-            <span [class.not-set-badge]="element.room === 'Not set'">{{ element.room }}</span>
+            <span [class.not-set-badge]="element.room === 'Not set'">{{
+              element.room
+            }}</span>
           </td>
         </ng-container>
 
@@ -138,9 +146,19 @@
               mat-button
               class="sec-ripple edit-button"
               (click)="openEditDialog(element)"
+              [disabled]="loadingScheduleId === element.schedule_id"
             >
-              <mat-icon>edit</mat-icon>
-              <span>Edit</span>
+              <div class="button-content">
+                @if (loadingScheduleId === element.schedule_id) {
+                <mat-spinner
+                  class="custom-spinner sec-spinner"
+                  diameter="24"
+                ></mat-spinner>
+                } @else {
+                <mat-icon>edit</mat-icon>
+                <span>Edit</span>
+                }
+              </div>
             </button>
           </td>
         </ng-container>
