add box shadow to tables

--- a/frontend/src/app/core/components/admin/faculty-pref/faculty-pref.component.scss
+++ b/frontend/src/app/core/components/admin/faculty-pref/faculty-pref.component.scss
@@ -20,6 +20,7 @@
   overflow: auto;
   position: relative;
   border-radius: var(--border-radius-md);
+  box-shadow: var(--shadow-level-1);
 
   .table-container {
     @include hide-scrollbar;
@@ -27,6 +28,7 @@
     flex-direction: column;
     background-color: var(--neutral-light);
     max-height: 50rem;
+
 
     .custom-table {
       @include default-transition;
