--- a/frontend/src/app/core/components/admin/scheduling/scheduling.component.scss
+++ b/frontend/src/app/core/components/admin/scheduling/scheduling.component.scss
@@ -25,6 +25,7 @@
   overflow: auto;
   position: relative;
   border-radius: var(--border-radius-md);
+  box-shadow: var(--shadow-level-1);
 
   .table-container {
     @include hide-scrollbar;
