--- a/frontend/src/app/shared/dialog-pref/dialog-pref.component.scss
+++ b/frontend/src/app/shared/dialog-pref/dialog-pref.component.scss
@@ -27,6 +27,7 @@
   position: relative;
   border-radius: var(--border-radius-md);
   max-height: 30vw;
+  box-shadow: var(--shadow-level-1);
 
   .table-container {
     @include hide-scrollbar;
