add loading state on edit button

--- a/frontend/src/app/core/components/admin/scheduling/scheduling.component.scss
+++ b/frontend/src/app/core/components/admin/scheduling/scheduling.component.scss
@@ -71,6 +71,10 @@
         text-wrap: nowrap;
       }
 
+      .action-button-container {
+        @include flex-layout($align: stretch);
+      }
+
       .edit-button {
         @include flex-layout;
         color: var(--secondary-text);
