--- a/frontend/src/app/core/components/admin/scheduling/scheduling.component.html
+++ b/frontend/src/app/core/components/admin/scheduling/scheduling.component.html
@@ -141,25 +141,27 @@
           <th mat-header-cell *matHeaderCellDef class="custom-header">
             Action
           </th>
-          <td mat-cell *matCellDef="let element" class="custom-cell">
-            <button
-              mat-button
-              class="sec-ripple edit-button"
-              (click)="openEditDialog(element)"
-              [disabled]="loadingScheduleId === element.schedule_id"
-            >
-              <div class="button-content">
-                @if (loadingScheduleId === element.schedule_id) {
-                <mat-spinner
-                  class="custom-spinner sec-spinner"
-                  diameter="24"
-                ></mat-spinner>
-                } @else {
-                <mat-icon>edit</mat-icon>
-                <span>Edit</span>
-                }
-              </div>
-            </button>
+          <td mat-cell *matCellDef="let element" class="custom-cell action">
+            <div class="action-button-container">
+              <button
+                mat-button
+                class="sec-ripple edit-button"
+                (click)="openEditDialog(element)"
+                [disabled]="loadingScheduleId === element.schedule_id"
+              >
+                <div class="button-content">
+                  @if (loadingScheduleId === element.schedule_id) {
+                  <mat-spinner
+                    class="custom-spinner sec-spinner"
+                    diameter="24"
+                  ></mat-spinner>
+                  } @else {
+                  <mat-icon>edit</mat-icon>
+                  <span>Edit</span>
+                  }
+                </div>
+              </button>
+            </div>
           </td>
         </ng-container>
 
