--- a/frontend/src/styles/theme.scss
+++ b/frontend/src/styles/theme.scss
@@ -42,9 +42,9 @@
   --blue-fade: #0027702f;
   --blue-fade-lighter: #011b4b1a;
 
-  --purple-primary: #2e007d;
+  --purple-primary: #310085;
   --purple-fade: #27006a31;
-  --purple-fade-lighter: #1c004d1a;
+  --purple-fade-lighter: #21035431;
 
   --green-primary: #005a09;
   --green-fade: #00461933;
