--- a/frontend/src/app/shared/table-dialog/table-dialog.component.scss
+++ b/frontend/src/app/shared/table-dialog/table-dialog.component.scss
@@ -6,6 +6,10 @@
   // max-width: none; // Remove max-width constraint
 }
 
+:host {
+  @include custom-spinner(var(--primary-text));
+}
+
 .table-dialog-title {
   font-family: "Inter Tight", sans-serif !important;
   color: var(--primary-text) !important;
