rename to faculty preferences

--- a/frontend/src/app/core/components/admin/main/main.component.html
+++ b/frontend/src/app/core/components/admin/main/main.component.html
@@ -43,7 +43,7 @@
         routerLinkActive="active-link"
       >
         <span mat-symbol="groups" matListItemIcon></span>
-        <span matListItemTitle>Faculty</span>
+        <span matListItemTitle>Faculty Preferences</span>
       </a>
       <!--Scheduling-->
       <a
