enhance badge styling

--- a/frontend/src/app/core/components/admin/faculty-pref/faculty-pref.component.html
+++ b/frontend/src/app/core/components/admin/faculty-pref/faculty-pref.component.html
@@ -67,8 +67,9 @@
               [ngClass]="{
                 'full-time':
                   element.facultyType.toLowerCase().includes('full-time') ||
-                  element.facultyType.toLowerCase().includes('designee') ||
                   element.facultyType.toLowerCase().includes('temporary'),
+                  'full-time-designee':
+                  element.facultyType.toLowerCase().includes('designee'),
                 'part-time': element.facultyType
                   .toLowerCase()
                   .includes('part-time')
