--- a/frontend/src/app/shared/dialog-scheduling/dialog-scheduling.component.html
+++ b/frontend/src/app/shared/dialog-scheduling/dialog-scheduling.component.html
@@ -19,7 +19,7 @@
       </div>
       } @else { @for (faculty of data.suggestedFaculty; track faculty) {
       <div
-        class="faculty-item"
+        class="faculty-card"
         (click)="onFacultyClick(faculty)"
         style="cursor: pointer"
         [ngClass]="{ 'selected-faculty': isFacultySelected(faculty) }"
@@ -29,6 +29,7 @@
           class="faculty-type"
           [ngClass]="{
             'full-time': faculty.type.includes('Full-time'),
+            'full-time-designee': faculty.type.includes('Designee'),
             'part-time': faculty.type === 'Part-time'
           }"
         >
