rename to faculty

--- a/frontend/src/app/core/components/admin/main/main.component.html
+++ b/frontend/src/app/core/components/admin/main/main.component.html
@@ -39,11 +39,11 @@
       <a
         mat-list-item
         class="list-item"
-        routerLink="/admin/faculty-preferences"
+        routerLink="/admin/faculty"
         routerLinkActive="active-link"
       >
         <span mat-symbol="groups" matListItemIcon></span>
-        <span matListItemTitle>Faculty Preferences</span>
+        <span matListItemTitle>Faculty</span>
       </a>
       <!--Scheduling-->
       <a
